--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,6 @@
     "name": "4d47/tag",
     "type": "library",
     "description": "Tag string generator (Engineered for making soup)",
-    "require": { "php": ">=5.3.0" }
+    "require": { "php": ">=5.3.0" },
+    "autoload": { "psr-0": { "Tag": "" } }
 }
