Revert "Use autoload files to support function"
This reverts commit 527173ffebde055707604f18850959f8a307884b.

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,5 @@
     "type": "library",
     "description": "Tag string generator (Engineered for making soup)",
     "require": { "php": ">=5.3.0" },
-    "autoload": { "files": [ "Tag.php" ] }
+    "autoload": { "psr-0": { "Tag": "" } }
 }
