--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "4d47/tag",
     "type": "library",
     "description": "Tag string generator (Engineered for making soup)",
+    "license": "MIT",
     "require": { "php": ">=5.3.0" },
     "autoload": { "files": [ "Tag.php" ] }
 }
